--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Frases Motivacionais</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>teste</h1>
+    <main id="main">
+        <h1 id="titulo" class="titulo">✨ Frases Motivacionais ✨</h1>
+        <p id="frase" class="frase">Clique no botão para gerar a frase</p>
+        <button id="botao" class="botao">Gerar Frase</button>
+    </main>
 </body>
+<script src="./script.js"></script>
 </html>
